kustomize/workload-multus-internal/network-instance-201-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstance
metadata:
  name: multus-internal-201-network-instance-leaf1
  labels:
    target: leaf1
spec:
  network-instance:
  - name: multus-internalmacvrfipvlan201
    type: mac-vrf
    admin-state: enable
    description: paco-multus-internalmacvrfipvlan201
    interface:
    - name: lag1.201
    - name: lag2.201
    - name: irb0.201
    vxlan-interface:
    - name: vxlan0.201
    bridge-table:
      mac-duplication:
        admin-state: enable
        action: blackhole
