kustomize/workload-multus-internal/network-instance-202-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstance
metadata:
  name: multus-internal-202-network-instance-leaf1
  labels:
    target: leaf1
spec:
  network-instance:
  - name: multus-internalmacvrfsriov1202
    type: mac-vrf
    admin-state: enable
    description: paco-multus-internalmacvrfsriov1202
    interface:
    - name: lag1.202
    - name: lag2.202
    - name: irb0.202
    vxlan-interface:
    - name: vxlan0.202
    bridge-table:
      mac-duplication:
        admin-state: enable
        action: blackhole
