kustomize/workload-multus-internal/network-instance-205-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstance
metadata:
  name: multus-internal-205-network-instance-leaf2
  labels:
    target: leaf2
spec:
  network-instance:
  - name: multus-internalipvrfitfce205
    type: ip-vrf
    admin-state: enable
    description: paco-multus-internalipvrfitfce205
    interface:
    - name: ethernet-1/50.205
    - name: irb0.201
    - name: irb0.203
    vxlan-interface:
    - name: vxlan0.205
