kustomize/workload-multus-internal/network-instance-protocol-bgpevpn201-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: multus-internal-201-protocolbgpevpn-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-internalmacvrfipvlan201
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 201
      vxlan-interface: vxlan0.201
