kustomize/workload-multus-internal/network-instance-protocol-bgpevpn201-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: multus-internal-201-protocolbgpevpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-macvrf-ipvlan-201
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 201
      vxlan-interface: vxlan0.201
