kustomize/workload-multus-internal/network-instance-protocol-bgpevpn203-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: multus-internal-203-protocolbgpevpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-macvrf-sriov-203
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 203
      vxlan-interface: vxlan0.203
