kustomize/workload-multus-internal/network-instance-protocol-bgpevpn205-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: multus-internal-205-protocolbgpevpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-ipvrf-itfce-205
  bgp-evpn:
    bgp-instance:
    - id: "1"
      admin-state: enable
      ecmp: 8
      evi: 205
      vxlan-interface: vxlan0.205
