kustomize/workload-multus-internal/network-instance-protocol-bgpvpn201-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: multus-internal-201-protocolbgpvpn-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-macvrf-ipvlan-201
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:201
        import-rt: target:65002:201
