kustomize/workload-multus-internal/network-instance-protocol-bgpvpn205-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: multus-internal-205-protocolbgpvpn-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-ipvrf-itfce-205
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:205
        import-rt: target:65002:205
