kustomize/workload-multus-internal/network-instance-protocol-linux201-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: multus-internal-201-protocollinux-leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: multus-macvrf-ipvlan-201
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
