kustomize/workload-multus-internal/network-instance-protocol-linux201-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: multus-internal-201-protocollinux-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-internalmacvrfipvlan201
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
