kustomize/workload-multus-internal/network-instance-protocol-linux205-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: multus-internal-205-protocollinux-leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: multus-ipvrf-itfce-205
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
