kustomize/workload-multus-internal/subinterface-lag1-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterfaceSubinterface
metadata:
  name: multus-internal-subinterface-lag1-leaf1
  labels:
    target: leaf1
spec:
  interface-name: lag1
  subinterface:
  - index: 201
    type: bridged
    admin-state: enable
    description: "paco-esi1-201-leaf1"
    vlan:
      encap:
        single-tagged:
          vlan-id: "201"
  - index: 202
    type: bridged
    admin-state: enable
    description: "paco-esi1-202-leaf1"
    vlan:
      encap:
        single-tagged:
          vlan-id: "202"
