kustomize/workload-multus-internal/subinterface-lag1-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterfaceSubinterface
metadata:
  name: multus-internal-subinterface-lag1-leaf2
  labels:
    target: leaf2
spec:
  interface-name: lag1
  subinterface:
  - index: 201
    type: bridged
    admin-state: enable
    description: "paco-esi1-201-leaf2"
    vlan:
      encap:
        single-tagged:
          vlan-id: "201"
  - index: 203
    type: bridged
    admin-state: enable
    description: "paco-esi1-203-leaf2"
    vlan:
      encap:
        single-tagged:
          vlan-id: "203"
