kustomize/workload-multus-internal/subinterface-lag2-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaInterfacesInterfaceSubinterface
metadata:
  name: multus-internal-subinterface-lag2-leaf2
  labels:
    target: leaf2
spec:
  interface-name: lag2
  subinterface:
  - index: 201
    type: bridged
    admin-state: enable
    description: "paco-esi2-201-leaf2"
    vlan:
      encap:
        single-tagged:
          vlan-id: "201"
  - index: 203
    type: bridged
    admin-state: enable
    description: "paco-esi2-203-leaf2"
    vlan:
      encap:
        single-tagged:
          vlan-id: "203"
